# xbelite2

./: .gitignore  99-xbelite2.rules  Cargo.toml  PKGBUILD  README.md  all.pcapng  install.sh  justfile  namechange.pcapng  what.pcapng  xbelite2-0.1.0-1-x86_64.pkg.tar.zst  xbelite2.install  xbelite2d.service
daemon/: Cargo.toml
daemon/src/: config.rs  daemon.rs  evdev.rs  grab.rs  hid.rs  hidraw.rs  lib.rs  main.rs  types.rs  uinput.rs
docs/: protocol.md
dumps/: Restored a profile to default.pcapng  assinged another paddle button as a Shift button.pcapng  changed controller xbox LED color and set brightness.pcapng  remapped right stick to be inverted, and remapped right stick click.pcapng  remapped the Y face button and 1 of the paddles.pcapng  remapped trigger to the F key on the keyboard.pcapng  remapping 2 face buttons then 1 paddle button.pcapng  restored profile to default and then set the triggers to 67 percent.pcapng  unmapped paddle.pcapng
gip/: Cargo.toml
gip/src/: hw_profile.rs  led.rs  lib.rs  name.rs  profile.rs  rumble.rs  transport.rs  types.rs
gui/: .qmlls.ini  Cargo.toml  build.rs
gui/assets/: resources.qrc
gui/qml/: ButtonMapPage.qml  ControllerView.qml  ProfilePage.qml  StickCurvePage.qml  TriggerPage.qml  VibrationPage.qml  main.qml
gui/src/: device_monitor.rs  evdev_reader.rs  hw_config.rs  main.rs  profile_model.rs  writer.rs
kmod/: ..module-common.o.cmd  .Module.symvers.cmd  .modules.order.cmd  .xbelite2.ko.cmd  .xbelite2.mod.cmd  .xbelite2.mod.o.cmd  .xbelite2.o.cmd  .xbelite2_c.o.cmd  .xbelite2_rust.o.cmd  Kbuild  Makefile  dkms.conf  modules.order  xbelite2.c  xbelite2.ko  xbelite2.mod  xbelite2.mod.c  xbelite2_c.c  xbelite2_logic.c  xbelite2_rust.rs
modprobe.d/: xbelite2-blacklist.conf
pkg/: .SRCINFO  PKGBUILD  xbelite2.install  xbelite2d.service
pkg/modprobe.d/: xbelite2-blacklist.conf  xbelite2-hid-microsoft.conf  xbelite2.conf
src/: config.rs  daemon.rs  evdev.rs  hidraw.rs  transform.rs  types.rs  uinput.rs
xbe2-bt/: Cargo.toml
xbe2-rw/: Cargo.toml
(+9 files in other folders)
