[package]
name = "xbelite2-gip"
version = "0.8.12"
edition = "2021"
description = "GIP protocol library for Xbox Elite Series 2 controllers"
license = "GPL-2.0-only"

[lib]
name = "xbelite2_gip"
path = "src/lib.rs"

[dependencies]
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
