[package]
name = "xbelite2-gui"
version = "0.9.4"
edition = "2021"
description = "Xbox Elite Series 2 profile configurator"
license = "GPL-2.0-only"

[dependencies]
cxx = "1.0"
cxx-qt = "0.8"
cxx-qt-lib = { version = "0.8", features = ["qt_full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
xbelite2-gip = { path = "../gip" }
libc = "0.2"
log = "0.4"
evdev = "0.12"
nix = { version = "0.29", features = ["fs", "poll"] }

[build-dependencies]
cxx-qt-build = { version = "0.8", features = ["link_qt_object_files"] }
